--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
                             <div id="cookieHelp" class="form-text">Example: dd03219dd34c1752309adb21d9c2ca17.1722815119</div>
                         </div>
                         <div class="mb-3">
-                            <label for="inputUserAgent" class="form-label">User Agent from the browser</label>
+                            <label for="inputUserAgent" class="form-label">User Agent from the browser (optional)</label>
                             <input type="text" class="form-control" id="inputUserAgent" name="inputUserAgent" aria-describedby="userAgentHelp">
                             <div id="userAgentHelp" class="form-text">Example: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/127.0.0.0 Safari/537.36</div>
                         </div>
