Fixed one issue

--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
                         <div class="mb-3">
                             <label for="inputUserAgent" class="form-label">User Agent from the browser (optional)</label>
                             <input type="text" class="form-control" id="inputUserAgent" name="inputUserAgent" aria-describedby="userAgentHelp">
-                            <div id="userAgentHelp" class="form-text">Example: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/127.0.0.0 Safari/537.36</div>
+                            <div id="userAgentHelp" class="form-text">Default: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/127.0.0.0 Safari/537.36</div>
                         </div>
                         <div class="input-group mb-3">
                             <span class="input-group-text">Screen Resolution (optional)</span>
