HTML issue is fixed

--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,8 @@
                                 <strong>-</strong> Посмотреть уведомления профиля<br>
                                 <strong>-</strong> Посмотреть активные объявления профиля<br>
                                 <code>Периодически cookie ssid нужно обновлять в связи с системой безопасности Avito, необходимо проводить отдельный black box тест на эту тему.</code><br>
-                                <strong>Пример результата:</strong> <a href="/result?profileID=13862105" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">http://79.174.91.185/result?profileID=13862105</a></p>
+                                <strong>Пример результата:</strong> <a href="/result?profileID=13862105"
+                                    class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">http://79.174.91.185/result?profileID=13862105</a>
                             </div>
                         </div>
                     </div>
