Problem with ads sum is solved

--- a/html/index.html
+++ b/html/index.html
@@ -33,10 +33,12 @@
                                 бал, количество отзывов)<br>
                                 <strong>-</strong> Посмотреть e-mail и телефон профиля<br>
                                 <strong>-</strong> Посмотреть уведомления профиля<br>
-                                <strong>-</strong> Посмотреть активные объявления профиля<br>
-                                <code>Периодически cookie ssid нужно обновлять в связи с системой безопасности Avito, необходимо проводить отдельный black box тест на эту тему.</code><br>
+                                <strong>-</strong> Посмотреть активные объявления профиля и показать первые 10 объявлений<br>
                                 <strong>Пример результата:</strong> <a href="/result?profileID=13862105"
-                                    class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">http://79.174.91.185/result?profileID=13862105</a>
+                                    class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">http://79.174.91.185/result?profileID=13862105</a><br>
+                                <strong>Репозиторий GitHub:</strong> <a href="https://github.com/egsablin/playwright-avito"
+                                    class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank">https://github.com/egsablin/playwright-avito</a><br>
+                                    <code>Периодически cookie ssid нужно обновлять в связи с системой безопасности Avito, необходимо проводить отдельный black box тест на эту тему. Так же бывает от высокой нагрузки VPS или сайт Avito отвечает с задержкой, тогда скрипт может не сработать, рекомендую попробовать у себя на компьютере или ознакомиться с примером результата.</code>
                             </div>
                         </div>
                     </div>
